<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="@dimen/margin16"
    android:layout_weight="1"
    android:background="@drawable/gw4"
    android:backgroundTint="@color/backgroundTint"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

            <TextView
                android:id="@+id/question_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:theme="@style/TextViewStyle" />

            <RadioGroup
                android:id="@+id/Radio_Answers3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_radio3"
                android:layout_marginTop="20dp">

                <RadioButton
                    android:id="@+id/radio_answer5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer31"
                    android:theme="@style/RadioButton_Answer" />

                <RadioButton
                    android:id="@+id/radio_answer6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer32"
                    android:theme="@style/RadioButton_Answer" />

                <RadioButton
                    android:id="@+id/radio_answer7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer33"
                    android:theme="@style/RadioButton_Answer" />

                <RadioButton
                    android:id="@+id/radio_answer8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer34"
                    android:theme="@style/RadioButton_Answer" />
            </RadioGroup>


        </LinearLayout>

        