<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_margin="@dimen/margin16"
    android:layout_weight="1"
    android:background="@drawable/gw3"
    android:backgroundTint="@color/backgroundTint"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

            <TextView
                android:id="@+id/question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:theme="@style/TextViewStyle" />

            <RadioGroup
                android:id="@+id/Radio_Answers2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin20"
                android:layout_marginTop="@dimen/margin40">

                <RadioButton
                    android:id="@+id/radio_answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer21"
                    android:theme="@style/RadioButton_Answer" />

                <RadioButton
                    android:id="@+id/radio_answer4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer22"
                    android:theme="@style/RadioButton_Answer" />

                <RadioButton
                    android:id="@+id/radi_answer5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer23"
                    android:theme="@style/RadioButton_Answer" />
            </RadioGroup>


        </LinearLayout>